@@ -1,9 +1,23 @@
 language: perl
 perl:
-        - "5.22"
-        - "5.20"
-        - "5.18"
-        - "5.16"
-        - "5.14"
-        - "5.12"
-        - "5.10"
+  - "5.26"
+  - "5.24"
+  - "5.20"
+  - "5.18"
+  - "5.16"
+  - "5.14"
+  - "5.12"
+  - "5.10"
+before_install:
+  - cpanm --notest Perl::Tidy
+  - cpanm --notest Test::Code::TidyAll
+install:
+  - cpanm --quiet --installdeps --notest --force --skip-satisfied .
+  - cpanm --quiet --notest --skip-satisfied Devel::Cover
+script:
+  - perl Build.PL && ./Build build && cover -test
+after_success:
+  - cpanm --quiet --notest --skip-satisfied Devel::Cover::Report::Coveralls
+  - cover -report coveralls
+env: RELEASE_TESTING=1 AUTOMATED_TESTING=1
+sudo: false
